preloader css gap fixed

--- a/preloader.css
+++ b/preloader.css
@@ -65,7 +65,7 @@
 
 @media (max-width: 768px) {
     .loader .letter {
-        font-size: 3rem;
+        /* font-size: 3rem; */
         /* Adjust font size */
     }
 }
@@ -74,7 +74,7 @@
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
     .loader {
-        gap: 20px;
+        gap: 10px;
     }
     .loader .letter {
         font-size: 10px;
